<resources>
    <string name="app_name">Challenge2</string>
    <string name="msg_search"><![CDATA[Cari layanan, makanan, & tujuan]]></string>
    <string name="txt_goride">GoRide</string>
    <string name="txt_gocar">GoCar</string>
    <string name="gofood">GoFood</string>
    <string name="txt_gosend">GoSend</string>
    <string name="txt_gomart">GoMart</string>
    <string name="txt_gopulsa">GoPulsa</string>
    <string name="txt_check_in">Check in</string>
    <string name="txt_lainnya">Lainnya</string>
    <string name="txt_gopay">gopay</string>
    <string name="txt_money">Rp1.xxxx</string>
    <string name="txt_msg_money"><![CDATA[Klik & cek riwayat]]></string>
    <string name="btn_to_gojek">Ke Gojek</string>
    <string name="txt_pay">Bayar</string>
    <string name="txt_top_up">Isi saldo</string>
    <string name="txt_explore">Eksplor</string>
    <string name="txt_exp_banner">193 XP lagi ada Harta Karun</string>
    <string name="txt_xp_banner">Harta Karun bentar lagi hilang</string>
    <string name="txt_quick_access">Akses cepat</string>
    <string name="txt_disc_voc">Ada voucher nganggur, nih</string>
    <string name="txt_restoran_terdekat">Restoran terdekat</string>
    <string name="txt_cashback">Belanja Produk Kecantikan di Tokopedia lebih hemat pake GoPay</string>
    <string name="txt_tokped">tokopedia</string>
    <string name="txt_cantikfest_banner">Temukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%. Klik! 👈</string>
    <string name="price_1st"><strike>Rp 1xx.xxxx</strike></string>
</resources>