<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grid_feature"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/green_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/grid_feature"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wadah_green_1"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_goride"
                app:layout_constraintBottom_toBottomOf="@id/green_1"
                app:layout_constraintEnd_toEndOf="@id/green_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_goride"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/green_1"
                app:layout_constraintEnd_toEndOf="@id/green_1"
                app:layout_constraintStart_toStartOf="@id/green_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/green_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/green_1"
            app:layout_constraintTop_toTopOf="@id/grid_feature">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="66dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_gocar"
                app:layout_constraintBottom_toBottomOf="@id/green_2"
                app:layout_constraintEnd_toEndOf="@id/green_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_gocar"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/red_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/green_2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_red"
                app:layout_constraintStart_toStartOf="@id/red_1"
                app:layout_constraintTop_toTopOf="@id/red_1">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="18dp"
                android:src="@drawable/ic_gofood"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/gofood"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/red_1"
                app:layout_constraintEnd_toEndOf="@id/red_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/green_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/red_1"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="22dp"
                android:src="@drawable/ic_gosend"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_gosend"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/red_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/green_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_gomart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_gomart"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blue_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/red_2"
            app:layout_constraintTop_toBottomOf="@id/green_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_gopulsa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_gopulsa"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blue_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/blue_1"
            app:layout_constraintTop_toBottomOf="@id/red_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_grid_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_checkin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_check_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/blue_2"
            app:layout_constraintTop_toBottomOf="@id/green_3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/grid_others"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_grid_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_four_dots"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/txt_lainnya"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>