<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="240dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_marginStart="170dp"
            app:cardBackgroundColor="@color/islamic_green"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_tokped"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="cantik"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="fest"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_lipstick"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_beauty_cream"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_sunscreen"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="175dp"
            android:layout_marginStart="0dp"
            app:cardBackgroundColor="@color/electric_blue"
            app:cardCornerRadius="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_wallet_white"
                />

            <TextView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/txt_gopay"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/txt_cashback"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp"
                android:text="CASH"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="90dp"
                android:text="BACK"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="70dp"
                android:text="50"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_discount_green"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="126dp"
                android:background="@drawable/bg_solid_blue_old"
                android:text="Bisa pakai"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="126dp"
                android:background="@drawable/bg_white"
                android:text="gopaylater"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="83dp"
                android:layout_marginTop="129dp"
                android:src="@drawable/ic_paylater"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="177dp"
            android:text="Festival idaman perempuan! &#128525;"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:text="@string/txt_cantikfest_banner"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>